--- a/exgridview/.project
+++ b/exgridview/.project
@@ -1,5 +1,5 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.1.1
+# Compiled with Gambas 3.9.1
 Title=exgridview
 Startup=FTest
 Icon=.hidden/control/exgridview.png
@@ -8,9 +8,10 @@ Component=gb.image
 Component=gb.gui
 Component=gb.form
 Component=gb.db
-Description="Un \"extended gridview\", con ordenamiento, data en memoria y busqueda indexada, la fuente se mantiene en ram, similar a tabletools.\nNo puede ser usado tan facilmente, debe ser instanciado con un contenedor y observado para los eventos.\nPara mejor implementacion vease \"exGridfilter\""
+Description="Un \"extended gridview\", con auto fuente de datos, ordenamiento y data en memoria, la fuente se mantiene en ram, similar a tabletools.\nNo puede ser usado tan facilmente, debe ser instanciado con un contenedor y observado para los eventos.\nPara mejor implementacion vease \"exGridfilter\""
 Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>\nJorge Carrión <shordi@gmail.com>"
 TabSize=4
+Language=es
 KeepDebugInfo=0
-MakeComponent=1
+Type=Component
 Packager=1
