haciendo exgridview la definicion proyecto compatible con gambas 3.1 a 3.9 * ajustado un ejemplo mejorado en la documentacion principal rapida * en gambas 3.1 la definicion de projecto solo usa "makecomponet" si es o no es * en gambas 3.4 en adelante ya se diferencia componentes de librerias

--- a/exgridview/.project
+++ b/exgridview/.project
@@ -1,5 +1,5 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.5.4
+# Compiled with Gambas 3.1.1
 Title=exGridview
 Startup=FTest
 Icon=.hidden/control/exgridview.png
@@ -13,4 +13,5 @@ Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>\nJorge Carrión <shordi@gma
 TabSize=4
 KeepDebugInfo=0
 Type=Component
+MakeComponent=1
 Packager=1
