gridview documentado y ajustado soporte para varian matrixes dimensionales * arreglado asignacion automatica de titulos * arreglado matrixes y asignacion de titulos, closes #11 * documentado correctamentamente para que lo detecte el ide

--- a/exgridview/.project
+++ b/exgridview/.project
@@ -1,9 +1,9 @@
 # Gambas Project File 3.0
 # Compiled with Gambas 3.5.4
-Title=exgridview
+Title=exGridview
 Startup=FTest
 Icon=.hidden/control/exgridview.png
-Version=1.0.2
+Version=1.1.0
 Component=gb.image
 Component=gb.gui
 Component=gb.form
