--- a/exfuntions/.project
+++ b/exfuntions/.project
@@ -1,16 +1,24 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.9.1
+# Compiled with Gambas 3.1.1
 Title=exfunctions
+Startup=exMtest
 Version=0.0.1
 Component=gb.image
 Component=gb.gui
 Component=gb.form
+Component=gb.db
+Component=gb.db.mysql
+Component=gb.db.odbc
+Component=gb.db.postgresql
+Component=gb.db.sqlite3
+Component=gb.vb
+Component=gb.web
 Component=gb.xml
-Description="Compilation of utilities and functions developed by the gambas comunity."
+Description="Utilities functions for developming on Gambas (part of framework)"
 Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>"
 TabSize=4
 Translate=1
 Language=es
-Type=Library
+MakeComponent=1
 Vendor=gambasex
 Packager=1
