--- a/exfuntions/.project
+++ b/exfuntions/.project
@@ -1,5 +1,5 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.1.1
+# Compiled with Gambas 3.9.1
 Title=exfunctions
 Startup=exMtest
 Version=0.0.1
@@ -11,6 +11,10 @@ Component=gb.db.mysql
 Component=gb.db.odbc
 Component=gb.db.postgresql
 Component=gb.db.sqlite3
+Component=gb.net
+Component=gb.net.curl
+Component=gb.util
+Component=gb.util.web
 Component=gb.vb
 Component=gb.web
 Component=gb.xml
@@ -19,7 +23,7 @@ Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>"
 TabSize=4
 Translate=1
 Language=es
-MakeComponent=1
 Type=Component
+MakeComponent=1
 Vendor=gambasex
 Packager=1
