correcciones ucase y uwords primera letra en mayusculas, ahora elimina espacios + arreglado eliminacion de espacios no funcionando + primer letra si es espacio elimina y sigue hasta que aparezca letra.

--- a/exfuntions/.settings
+++ b/exfuntions/.settings
@@ -11,7 +11,9 @@ Geometry=[522,197,575,240]
 Geometry=[515,176,575,240]
 
 [OpenFile]
-Count=0
+Count=1
+Active=1
+File[1]=".src/exMtest.module:27.12"
 
 [Watches]
 Count=0
