--- a/exfuntions/.project
+++ b/exfuntions/.project
@@ -1,7 +1,7 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.1.1
+# Compiled with Gambas 3.5.0
 Title=exfunctions
-Startup=exMtest
+Startup=mtest
 Version=0.0.1
 Component=gb.image
 Component=gb.gui
