--- a/exfuntions/.settings
+++ b/exfuntions/.settings
@@ -4,16 +4,10 @@ Count=0
 [DebugWindow]
 Count=0
 
-[DebugWindow/exModSysInfo.ProjInfo()]
-Geometry=[522,197,575,240]
-
-[DebugWindow/exModSysInfo.ProjInfo().Bounds]
-Geometry=[515,176,575,240]
-
 [OpenFile]
 Count=1
 Active=1
-File[1]=".src/exMtest.module:27.12"
+File[1]=".src/mtest.module:45.12"
 
 [Watches]
 Count=0
