migracion shortnames 2: todo a nombre de modulo/clase corto, migrado exgridview esto aunado a lo contestado en la lista gambas: https://sourceforge.net/p/gambas/mailman/message/36077727/ como esto no se puede, si no es parte del lenguaje en si se hace nombres cortos estos nombres son ahora nombres reservados TODO: pendiente referencia de exgridview en exgridfilter en renombrado esta tarea se relaciona con #10 pues falta unificacion

--- a/exgridview/.project
+++ b/exgridview/.project
@@ -1,8 +1,8 @@
 # Gambas Project File 3.0
 # Compiled with Gambas 3.1.1
-Title=exGridview
+Title=egv
 Startup=FTest
-Icon=.hidden/control/exgridview.png
+Icon=.hidden/control/egv.png
 Version=1.1.0
 Component=gb.image
 Component=gb.gui
