migracion shortnames 3: todo nombre de modulo/clase corto, migrado exgridfilter+exgridview esto aunado a lo contestado en la lista gambas: https://sourceforge.net/p/gambas/mailman/message/36077727/ como esto no se puede, si no es parte del lenguaje en si se hace nombres cortos estos nombres son ahora nombres reservados TODO: relacionada #10 en futuro se fusionara exgridview y exgridfilter

--- a/exgridfilter/.settings
+++ b/exgridfilter/.settings
@@ -40,7 +40,7 @@ Geometry=[0,28,210,210]
 [DebugWindow/c]
 Geometry=[-10,-8,875,708]
 
-[DebugWindow/exgridfilter1.Value]
+[DebugWindow/egf1.Value]
 Geometry=[0,28,210,210]
 
 [DebugWindow/grid.source]
