--- a/exgridfilter/.project
+++ b/exgridfilter/.project
@@ -1,8 +1,8 @@
 # Gambas Project File 3.0
 # Compiled with Gambas 3.1.1
-Title=exgridfilter
+Title=exgrids
 Startup=fTest
-Icon=.hidden/control/exgridfilter.png
+Icon=.hidden/control/egf.png
 Version=1.0.0
 Component=gb.image
 Component=gb.qt4
@@ -11,7 +11,7 @@ Component=gb.db
 Component=gb.db.sqlite3
 Component=gb.qt4.ext
 Component=gb.vb
-Description="Un \"extended gridview\", con ordenamiento, data en memoria y busqueda indexada, la fuente se mantiene en ram, similar a tabletools.\nA diferencia de exGridfilter este implementa su manejo de formulario, integra una barra de capacidades de busqueda y permite definir un menu de exportacion y acciones customizadas. Esta es la implementacion de exGridview."
+Description="Un \"enhanced gridview\", con ordenamiento, data en memoria y busqueda indexada, la fuente se mantiene en ram, similar a tabletools.\nA diferencia de exGridfilter este implementa su manejo de formulario, integra una barra de capacidades de busqueda y permite definir un menu de exportacion y acciones customizadas. Esta es la implementacion de exGridview (egv)."
 Authors="PICCORO Lenz McKAY gerardo <mckaygerhard@gmail.com>\nJorge Carrion <shordi@gmail.com>"
 TabSize=4
 MakeComponent=1
