simplificacion de configuracion minima strings manejables

--- a/exmanager/appconfigapp.conf
+++ b/exmanager/appconfigapp.conf
@@ -6,10 +6,10 @@ appuserubi="998"
 appappubi="999"
 
 [dbconexion]
-cnxsqliteruta=
-cnxsqlitename=".elsistemadblocal"
-cnxodbc1sybdb="Driver=FreeTDS;Server=#dbremotaip#;Database=#dbremota#;Port=2638;UId=dba;Pwd=sql;TDS_Version=5.0"
-cnxodbc1sybip="10.10.10.21"
-cnxodbc1mysdb="Driver=MySQL;Server=#dbprimarip#;Database=sysdbcatalogo;Port=3306;User=sysdbuser;Password=sysdbuser.1"
-cnxodbc1sybip="10.10.10.23"
+sqlitena=".elsistemadblocal"
+sqliteru=
+odbc1mip="10.10.10.23"
+odbc1mdb="Driver=MySQL;Server=#odbc1mip#;Database=sysdbnone;Port=3306;User=sysdbuser;Password=sysdbuser.1"
+odbc2sip="10.10.10.21"
+odbc2sdb="Driver=FreeTDS;Server=#odbc2sip#;Database=sysdblavka;Port=2638;UId=dba;Pwd=sql;TDS_Version=5.0"
 
