archivos de configuracion nuevos y formato asi como variables de manejo

--- a/exmanager/appconfigapp.conf
+++ b/exmanager/appconfigapp.conf
@@ -1,15 +1,21 @@
+# Application section, main config variables for all the application
+# app_type : if server, will be a daemon, if 'app' wil be a normal app, if 'web' will use as server side files
+# app_base : complete path to the base application, where all files will be load/used except config files
+# app_url : base of the URI Base Site URL at the webserver like http://localhost/
+# app_index : name of starting base program, if web the CGI SCRIPT_NAME, if dekstop the APP MAIN executable name
 
-[localidad]
-# default ubicacion corresponding of a invade user
-appuserubi="998"
-# default ubication of this instance where are excetude, respect the codger (in normal case must be same)
-appappubi="999"
+[application]
+apptype="web"
+appbase=""
+appurl=""
+appindex="index.cgi"
 
-[dbconexion]
-sqlitena=".elsistemadblocal"
-sqliteru=
-odbc1mip="10.10.10.23"
-odbc1mdb="Driver=MySQL;Server=#odbc1mip#;Database=sysdbnone;Port=3306;User=sysdbuser;Password=sysdbuser.1"
-odbc2sip="10.10.10.21"
-odbc2sdb="Driver=FreeTDS;Server=#odbc2sip#;Database=sysdblavka;Port=2638;UId=dba;Pwd=sql;TDS_Version=5.0"
+
+# Ubication section, main config variables for identificacion from user actions respect executing
+# appuserubi : default ubicacion corresponding of a invade user
+# appappubi : default ubication of this instance where are excetude, respect the codger (in normal case must be same)
+
+[ubication]
+appuserubi="9998"
+appappubi="9999"
 
