renaming and enhanced main component of framework to gb.mngr acording to gambas wiki how to * new names for each class to ease access * rename component name and docs files * added and format conections file configuration * added a default database to play * use VERSION file

--- a/gb.mngr/exdatabase.conf
+++ b/gb.mngr/exdatabase.conf
@@ -22,24 +22,42 @@ hostname=""
 username=""
 password=""
 database=""
-dbdriver="sqlite3",
+dbdriver="sqlite3"
 dbprefix=""
 char_set="utf8"
 
 [conex0]
+hostname="odbcsqlite"
+username=""
+password=""
+database=""
+dbdriver="odbc"
+dbprefix=""
+char_set=""
+
+[conex1]
+hostname="odbcmysql"
+username=""
+password=""
+database=""
+dbdriver="odbc"
+dbprefix=""
+char_set="utf8"
+
+[conex2]
 hostname="localhost"
 username="root"
 password="toor"
 database="mydb"
-dbdriver="mysql",
+dbdriver="mysql"
 dbprefix=""
 char_set="utf8"
 
-[conex1]
+[conex3]
 hostname="localhost"
 username="dba"
 password="sql"
 database="OP_001031"
-dbdriver="odbc",
+dbdriver="odbc"
 dbprefix=""
 char_set=""
