--- a/gb.mngr/.project
+++ b/gb.mngr/.project
@@ -1,8 +1,8 @@
 # Gambas Project File 3.0
 # Compiled with Gambas 3.1.1
-Title=exmanager
+Title=gb.mngr
 Startup=MTest
-Version=0.0.1
+VersionFile=1
 Component=gb.db
 Component=gb.db.mysql
 Component=gb.db.odbc
@@ -12,7 +12,9 @@ Component=gb.settings
 Component=gb.net
 Component=gb.net.curl
 Component=gb.vb
+Component=gb.web
 Description="parte principal del framework, inicia configuracion y conexciones a db memoria/ocal y remota/dbms"
+Authors="gambasex"
 TabSize=4
 MakeComponent=1
 ControlPublic=1
