--- a/libmngr/.project
+++ b/libmngr/.project
@@ -1,12 +1,10 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.10.0
+# Compiled with Gambas 3.5.4
 Title=libmngr
-Startup=Main
+Version=0.0.1
 VersionFile=1
 Component=gb.args
 Component=gb.compress
-Component=gb.compress.bzlib2
-Component=gb.compress.zlib
 Component=gb.db
 Component=gb.db.mysql
 Component=gb.db.odbc
@@ -15,12 +13,8 @@ Component=gb.db.sqlite3
 Component=gb.settings
 Component=gb.net
 Component=gb.net.curl
-Component=gb.markdown
 Component=gb.net.smtp
 Component=gb.openssl
-Component=gb.signal
-Component=gb.util
-Component=gb.util.web
 Component=gb.vb
 Component=gb.web
 Component=gb.xml
@@ -30,7 +24,6 @@ Component=gb.xml.xslt
 Description="libreria de inicio comun para el sistema"
 Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>"
 TabSize=4
-Language=en_US
 Type=Library
 Vendor=elsistema
 Packager=1
