clase de configuracion e inicio de aplicaion terminado de cargar valores * todos los valores de los dos archivos de configuracion se cargan * todos se cargan en una unica variable llamada collecion * emulacion de null para que acepte valores nulos y existan llaves vacias * see commit 697523fe6ba24d3a718d7dfa074cc5682f56ba0c

--- a/libmngr/exdatabase.conf
+++ b/libmngr/exdatabase.conf
@@ -1,7 +1,7 @@
 # -------------------------------------------------------------------
 # DATABASE CONNECTIVITY SETTINGS 
 # -------------------------------------------------------------------
-# For complete instructions please consult the 'appconfigdatabase' page
+# For complete instructions please consult the 'exdatabase' page
 # -------------------------------------------------------------------
 #
 #	['hostname'] The hostname of your database server or the DSN of the ODBC
