--- a/excore/.project
+++ b/excore/.project
@@ -1,7 +1,8 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.1.1
+# Compiled with Gambas 3.10.0
 Title=excore
 Startup=Main
+Version=0.0.1
 VersionFile=1
 Component=gb.image
 Component=gb.compress
@@ -24,6 +25,7 @@ Component=gb.xml.xslt
 Description="libreria de inicio comun para el sistema"
 Authors="PICCORO Lenz McKAY <mckaygerhard@gmail.com>"
 TabSize=4
-MakeComponent=1
+Language=es
+Type=Component
 Vendor=elsistema
 Packager=1
